--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <ul>
-            <li>Fathers Name: Mathura Prasad</li>
+            <li>Fathers Name: Mr. Mathura Prasad</li>
             <li>Date of Birth : 10th sep,1998</li>
             <li>Nationality : Indian</li>
             <li>Gender : Male</li>
